--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
     <link href="Assets/Stylesheets/main.css" rel="stylesheet">
     <script src="Assets/Scripts/modernizr.js"></script>
     <script src="Assets/Scripts/foundation.js"></script>
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+
 </head>
 
 <body>
-    <div class="row" id="home"></div>
-    <div class="row" id="choices"></div>
-    <div class="row" id="men"></div>
-    <div class="row" id="women"></div>
-    <div class="row" id="about"></div>
-    <div class="row" id="sale"></div>
-    <div class="row" id="social"></div>
+    <input type='text' id='nameInput' placeholder='Name'>
+    <input type='text' id='messageInput' placeholder='Message'>
+    <script>
+        var myDataRef = new Firebase('https://mdu9ek3lnhf.firebaseio-demo.com/');
+        $('#messageInput').keypress(function(e) {
+            if (e.keyCode == 13) {
+                var name = $('#nameInput').val(),
+                    text = $('#messageInput').val();
+                myDataRef.set('User' + name + 'says'
+                    text);
+                $('#messageInput').val('');
+            }
+        });
+
+    </script>
 </body>
 
 </html>
