--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             if (e.keyCode == 13) {
                 var name = $('#nameInput').val(),
                     text = $('#messageInput').val();
-                myDataRef.set('User' + name + 'says'
-                    text);
+                myDataRef.set({
+                    name: name,
+                    text: text
+                });
                 $('#messageInput').val('');
             }
         });
