--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             if (e.keyCode == 13) {
                 var name = $('#nameInput').val(),
                     text = $('#messageInput').val();
-                myDataRef.set({
+                myDataRef.push({
                     name: name,
                     text: text
                 });
