Notification of message arrival

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 $('#messageInput').val('');
             }
         });
+        myDataRef.on('child_added', function(snapshot) {
+
+        });
 
     </script>
 </body>
